@@ -4,6 +4,9 @@ Changelog
 Unreleased
 ~~~~~~~~~~
 
+- Errors can now be compared with each other to see if they are the
+  same. This makes it easier to test without doctest.
+
 - Made the truth test for the errors object check just for messages in
   itself or it's sub errors. This avoids having the errors object
   saying it is true after accessing a key for which no error exists
